Make header look better

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,11 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html lang="{{ page.lang | default: site.lang | default: "en" }}">
+<body>
 
+   {% include header.html %}
+   Post below header
 {{ content }}
+</body>
+
+
+</html>
