--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,8 +33,8 @@
 <div style="width: 100%; text-align:center;" >
   <div id="menu_container">
     <a href="#"><span class="menu_text">Comics</span></a>
-    <a href="#"><span class="menu_text">Comics</span></a>
-    <a href="#"><span class="menu_text">Comics</span></a>
+    <a href="#"><span class="menu_text">Characters</span></a>
+    <a href="#"><span class="menu_text">Blog</span></a>
 
   </div>
 </div>
