--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,25 +1,35 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
+<head>
+  {% include head.html %}
+</head>
 <body>
-
-{% include head.html %}
    {% include header.html %}
-   <h1>home page
-   </h1>
-{{ content }}
 
-<ul class="post-list">
-  {% for post in site.posts %}
-    <li>
-      <span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
+   <div id="home_content">
 
-      <h2>
-        <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
-      </h2>
-    </li>
-  {% endfor %}
-</ul>
+           <div class="masonry">
+     <ul class="post-list">
+     {% for post in site.posts %}
+      <li>
+      <div class="item">
+        <span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
 
+        <h2>
+          <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
+        </h2>
+          <div class="excerpt_container">
+            {{ post.excerpt | remove: '<p>' | remove: '</p>' }}
+
+        </div>
+      </div>
+      </li>
+     {% endfor %}
+     </ul>
+  </div>
+   </div>
+
+    {{ content }}
 </body>
 
 
