--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,10 +1,12 @@
+{% include base.html %}
+
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
 <body>
 
    {% include header.html %}
-   Post below header
-{{ content }}
+
+{{ content | replace: 'BASE', base }}
 </body>
 
 
