--- a/assets/main.css
+++ b/assets/main.css
@@ -136,7 +136,7 @@ body {
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
-    box-shadow: 2px 2px 4px 0 #ccc;
+    box-shadow: 2px 2px 2px 2px #ccc;
 }
 
 @media only screen and (min-width: 400px) {
