format home page. set up social links. set up blog and characters page. add footer.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,32 +10,35 @@
   <div style="width: 100%; text-align:center;" >
   <div id="social_container">
     <span>
-      <img class="social_img" src="https://static.wixstatic.com/media/4057345bcf57474b96976284050c00df.png/v1/fill/w_78,h_78,al_c,usm_0.66_1.00_0.01/4057345bcf57474b96976284050c00df.png">
+      <a href="https://www.instagram.com/sealiconvalley/">
+      <img class="social_img" src="{{base}}/assets/ig.png">
+    </a>
     </span>
     <span>
-      <img class="social_img" src="https://static.wixstatic.com/media/870f97661ed14a5bb2d96ecbddec0aed.png/v1/fill/w_78,h_78,al_c,usm_0.66_1.00_0.01/870f97661ed14a5bb2d96ecbddec0aed.png">
+      <a href="https://www.facebook.com/sealiconvalley/">
+      <img class="social_img" src="{{base}}/assets/fb.png">
+    </a>
     </span>
     <span>
-      <img class="social_img" src="https://static.wixstatic.com/media/38f46577d89b43ae95cb65fac6d660f3.png/v1/fill/w_78,h_78,al_c,usm_0.66_1.00_0.01/38f46577d89b43ae95cb65fac6d660f3.png">
+      <img class="social_img" src="{{base}}/assets/youtube.png">
     </span>
     <span>
-      <img class="social_img" src="https://static.wixstatic.com/media/45bce1d726f64f1999c49feae57f6298.png/v1/fill/w_78,h_78,al_c,usm_0.66_1.00_0.01/45bce1d726f64f1999c49feae57f6298.png">
+      <img class="social_img" src="{{base}}/assets/twitter.png">
     </span>
     <span>
-      <img class="social_img" src="https://static.wixstatic.com/media/9e47c827082f40bdb54d0cd16c3b28f6.png/v1/fill/w_78,h_78,al_c,usm_0.66_1.00_0.01/9e47c827082f40bdb54d0cd16c3b28f6.png">
+      <img class="social_img" src="{{base}}/assets/gplus.png">
     </span>
     <span>
-      <img class="social_img" src="https://static.wixstatic.com/media/e1aa082f7c0747168d9cf43e77046142.png/v1/fill/w_78,h_78,al_c,usm_0.66_1.00_0.01/e1aa082f7c0747168d9cf43e77046142.png">
+      <img class="social_img" src="{{base}}/assets/pinterest.png">
     </span>
   </div>
 </div>
 
 <div style="width: 100%; text-align:center;" >
   <div id="menu_container">
-    <a href="#"><span class="menu_text">Comics</span></a>
-    <a href="#"><span class="menu_text">Characters</span></a>
-    <a href="#"><span class="menu_text">Blog</span></a>
-
+    <a href="/"><span class="menu_text">Comics</span></a>
+    <a href="characters.html"><span class="menu_text">Characters</span></a>
+    <a href="blog.html"><span class="menu_text">Blog</span></a>
   </div>
 </div>
 </div>
