--- a/assets/main.css
+++ b/assets/main.css
@@ -179,3 +179,65 @@ body {
 .excerpt_container img {
 	width: 100%;
 }
+.footer {
+	width: 100%;
+	text-align: center;
+	font-size: 14px;
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+.post_info {
+	line-height:30px;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	padding:0;
+}
+.home_post_title {
+	font-size: 20px;
+	text-transform: capitalize;
+	margin: 0;
+	font-weight: bold;
+}
+.home_post_date {
+	float:right;
+	margin: 0;
+}
+
+
+@media only screen and (min-width: 400px) {
+    #blog_masonry {
+        -moz-column-count: 1;
+        -webkit-column-count: 1;
+        column-count: 1;
+    }
+}
+
+@media only screen and (min-width: 700px) {
+    #blog_masonry {
+        -moz-column-count: 1;
+        -webkit-column-count: 1;
+        column-count: 1;
+    }
+}
+
+@media only screen and (min-width: 900px) {
+    #blog_masonry {
+        -moz-column-count: 1;
+        -webkit-column-count: 1;
+        column-count: 1;
+    }
+}
+
+@media only screen and (min-width: 1100px) {
+    #blog_masonry {
+        -moz-column-count: 1;
+        -webkit-column-count: 1;
+        column-count: 1;
+    }
+}
+
+@media only screen and (min-width: 1280px) {
+    .wrapper {
+        width: 1260px;
+    }
+}
