--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,10 +3,12 @@
 </head>
 <body>
 <div id="banner_container">
+  <a href="index.html">
   <div id="title_container">
     <h1 class="title_h1">Sealicon</h1>
     <h1 class="title_h1">Valley</h1>
   </div>
+</a>
   <div style="width: 100%; text-align:center;" >
   <div id="social_container">
     <span>
@@ -36,7 +38,7 @@
 
 <div style="width: 100%; text-align:center;" >
   <div id="menu_container">
-    <a href="/"><span class="menu_text">Comics</span></a>
+    <a href="index.html"><span class="menu_text">Comics</span></a>
     <a href="characters.html"><span class="menu_text">Characters</span></a>
     <a href="blog.html"><span class="menu_text">Blog</span></a>
   </div>
