--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,6 +12,7 @@
 
     <div id="home_content">
 
+      <img src="assets/fish.gif" class="fish">
         <div class="masonry">
             <ul class="post-list">
                 {% for post in site.posts %}
