--- a/assets/main.css
+++ b/assets/main.css
@@ -254,3 +254,25 @@ body {
         width: 1260px;
     }
 }
+
+.fish {
+	width: 150px;
+  position: absolute;
+  top: 100px;
+  left: 100px;
+  animation: fishy 10s ease-in-out infinite;
+  transform: translateX(0) rotateY(180deg) rotate(-45deg);
+	z-index: 10;
+}
+
+@keyframes fishy {
+  25% {
+    transform: translateX(300px) rotateY(180deg) rotate(45deg);
+  }
+  50% {
+    transform: translateX(600px) rotate(-45deg);
+  }
+  75% {
+    transform: translateX(300px) rotate(45deg);
+  }
+}
