--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,7 +12,6 @@
 
     <div id="home_content">
 
-      <img src="assets/fish.gif" class="fish">
         <div class="masonry">
             <ul class="post-list">
                 {% for post in site.posts %}
@@ -25,6 +24,9 @@
                                 <span class="home_post_date" >{{ post.date | date: "%b %-d, %Y" }}</span>
 
                             </div>
+                            <p>
+                              {{post.url}}
+                            </p>
                         <a class="post-link" href="{{base}}{{ post.url }}">
                             <div class="excerpt_container">
                                 {{ post.excerpt | remove: '
