--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,11 +2,18 @@
 
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
+<head>
+    {% include head.html %}
+</head>
 <body>
 
    {% include header.html %}
 
+   <div class="post_container">
+
 {{ content | replace: 'BASE', base }}
+</div>
+{% include footer.html %}
 </body>
 
 
