Add carousel mwaha

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@
 <body>
     {% include header.html %}
 
-    <div id="home_content">
+    <div class="home_content">
 
         <div class="masonry">
             <ul class="post-list">
