fix jquery link

--- a/_layouts/characters0.html
+++ b/_layouts/characters0.html
@@ -4,7 +4,8 @@
 <html lang="{{ page.lang | default: site.lang | default: " en " }}">
 
 <head>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+
+  <script src="{{base}}/assets/jquery.min.js"></script>
   <script src="{{base}}/assets/carousel.js"></script>
   {% include head.html %}
 </head>
