--- a/_layouts/characters0.html
+++ b/_layouts/characters0.html
@@ -23,8 +23,10 @@
           <div class="citem e"></div>
         </div>
       </div>
-      <div class="next">Next</div>
-      <div class="prev">Prev</div>
+      <div class="navigation_holder">
+        <div class="prev"></div>
+        <div class="next"></div>
+      </div>
 </div>
     {% include footer.html %}
 </body>
