--- a/assets/main.css
+++ b/assets/main.css
@@ -289,12 +289,11 @@ body {
 }
 #characters {
 		padding: 70px 0;
-		font: 15px/20px Arial, sans-serif;
 		display: block;
 		max-width: 1400px;
 		border-style: solid;
     border-width: 1px;
-		margin-top: 50px;
+		position:relative;
 }
 
 .ccontainer {
@@ -303,7 +302,7 @@ body {
 	height: 200px;
 	position: relative;
 	perspective: 1000px;
-	margin-top: 200px;
+	z-index: 100;
 }
 
 .carousel {
@@ -320,12 +319,10 @@ body {
 	background: transparent;
 	width: 202px;
 	height: 235px;
-	line-height: 200px;
 	font-size: 5em;
 	text-align: center;
 	color: #FFF;
-	opacity: 0.95;
-	border-radius: 10px;
+	z-index: 0;
 }
 
 .a {
@@ -353,13 +350,29 @@ body {
 	background-image:url("dolphin.png");
 	background-size: cover;
 }
-
-.next, .prev {
-	color:black;
+.navigation_holder {
+	width:600px;
+	height:100%;
+	position:absolute;
+	margin: 0 auto;
+	top:0px;
+	margin-left: auto;
+	margin-right: auto;
+	left: 0;
+	right: 0;
 }
-
 .next {
+	width: 250px;
+	height:100%;
 	float:right;
+	background:yellow;
+	z-index: 1000;
+	perspective: 1200;
 }
 .prev {
+	width: 250px;
+	height:100%;
+	float:left;
+	background:red;
+	z-index: 1000;
 }
