--- a/_includes/headerv2.html
+++ b/_includes/headerv2.html
@@ -25,6 +25,12 @@
   height: 100px;
   position:absolute;
   top: 25%;
+  font-family:"Arial";
+  letter-spacing:20px;
+  text-transform:uppercase;
+  line-height:40px;
+  font-size:50px;
+  text-align:center;
 }
 .layer2 {
   width: 100%;
@@ -72,8 +78,9 @@
 <body>
 <div class="header_box">
   <div class="logo">
-    <h1 class="title_h1">Sealicon</h1>
-    <h1 class="title_h1">Valley</h1>
+    Sealicon<br/>
+    <br/>
+    Valley
   </div>
   <div class="layer2">
   </div>
@@ -85,8 +92,44 @@
   </div>
 
 </div>
+  <div style="width: 100%; text-align:center;" >
+  <div id="social_container">
+    <span>
+      <a href="https://www.instagram.com/sealiconvalley/">
+      <img class="social_img" src="{{base}}/assets/ig.png">
+    </a>
+    </span>
+    <span>
+      <a href="https://www.facebook.com/sealiconvalley/">
+      <img class="social_img" src="{{base}}/assets/fb.png">
+    </a>
+    </span>
+    <span>
+      <img class="social_img" src="{{base}}/assets/youtube.png">
+    </span>
+    <span>
+      <img class="social_img" src="{{base}}/assets/twitter.png">
+    </span>
+    <span>
+      <img class="social_img" src="{{base}}/assets/gplus.png">
+    </span>
+    <span>
+      <img class="social_img" src="{{base}}/assets/pinterest.png">
+    </span>
+  </div>
+</div>
+
+<div style="width: 100%; text-align:center;" >
+  <div id="menu_container">
+    <a href="index.html"><span class="menu_text">Comics</span></a>
+    <a href="characters.html"><span class="menu_text">Characters</span></a>
+    <a href="blog.html"><span class="menu_text">Blog</span></a>
+  </div>
+</div>
+<!--
 <div style="height:2000px; width: 100%;">
   <div class="smallheader"></div>
 </div>
+-->
 </body>
 </html>
