--- a/_layouts/characters0.html
+++ b/_layouts/characters0.html
@@ -12,7 +12,7 @@
 
 
 <body>
-    {% include header.html %}
+    {% include headerv2.html %}
 <div class="home_content" id="characters">
       <div class="ccontainer">
         <div class="carousel" id="ccarousel">
