add hamburger icon

--- a/_includes/headerv2.html
+++ b/_includes/headerv2.html
@@ -4,190 +4,74 @@
 <html lang="{{ page.lang | default: site.lang | default: " en " }}">
 
 <head>
-{% include head.html %}
-<script src="{{base}}/assets/jquery.min.js"></script>
-<script src="{{base}}/assets/jquery.color.js"></script>
-<script src="{{base}}/assets/scrolltest.js"></script>
-<style>
-.header_box {
-  position:relative;
-  height:970px;
-  background-image: url("{{base}}/assets/landscape-1.png");
-	background-repeat:no-repeat;
-	width: 100%;
-	background-size: cover;
-	background-repeat: no-repeat;
-  display: block;
-  overflow: hidden;
-  background-attachment: fixed;
-}
-.logo {
-  width:100%;
-  height: 100px;
-  position:absolute;
-  top: 25%;
-  font-family:"Arial";
-  letter-spacing:20px;
-  text-transform:uppercase;
-  line-height:40px;
-  font-size:50px;
-  text-align:center;
-}
-.layer2 {
-  width: 100%;
-  height:970px;
-  background-image: url("{{base}}/assets/landscape-2.png");
-	background-size: cover;
-	background-repeat:no-repeat;
-  position:absolute;
-  top:0%;
-}
-.layer3 {
-  width: 100%;
-  height:970px;
-  background-image: url("{{base}}/assets/landscape-3.png");
-	background-size: cover;
-	background-repeat:no-repeat;
-  position:absolute;
-  top:0%;
-}
-.layer4 {
-  width: 100%;
-  height:970px;
-  background-image: url("{{base}}/assets/landscape-4.png");
-	background-size: cover;
-	background-repeat:no-repeat;
-  position:absolute;
-  top:0%;
-}
-.layer5 {
-  width: 100%;
-  height:970px;
-  background-image: url("{{base}}/assets/landscape-5.png");
-	background-size: cover;
-	background-repeat:no-repeat;
-  position:absolute;
-  z-index: 1000;
-}
-.smallheader {
-  width: 100%;
-  height:200px;
-//  background: pink;
-}
-.header_bar_container {
-    width: 100%;
-    height: 86px;
-    position: absolute;
-   border-bottom-width:1px;
-   border-bottom-color:rgba(255, 255, 255, 0.3);
-    position:fixed;
-   border-bottom-style: solid;
-   z-index: 1500;
-}
-.header_bar {
-  width: 100%;
-  max-width: 1400px;
-  margin-left: auto;
-margin-right: auto;
-left: 0;
-right: 0;
-  height: 86px;
-  background: transparent;
-  position: absolute;
-  font-family:"Arial";
-  letter-spacing:8px;
-  text-transform:uppercase;
-  line-height:20px;
-  font-size:20px;
-  vertical-align: middle;
-}
-.logo_header_bar {
-  float: left;
-  display: inline-block;
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-}
-.menu_header_bar {
-  float:right;
-  display: inline-block;
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-  z-index: 10000;
-}
-.menu_header_text {
-}
-.menu_header_text:link {
-  text-decoration: none;
-}
-.menu_header_text:visited {
-  text-decoration: none;
-}
-.menu_header_text:active {
-  text-decoration: none;
-}
-</style>
-</head>
-<body>
-<div class="header_box">
-  <div class="header_bar_container">
-  <div class="header_bar">
-    <div class="logo_header_bar">
-    Sealicon Valley
-  </div>
-  <div class="menu_header_bar">
-    <a href="index.html"><span class="menu_header_text">Comics</span></a>
-    <a href="characters.html"><span class="menu_header_text">Characters</span></a>
-    <a href="blog.html"><span class="menu_header_text">Blog</span></a>
-  </div>
-  </div>
-</div>
-  <div class="logo">
-    Sealicon<br/>
-    <br/>
-    Valley
-  </div>
-  <div class="layer2">
-  </div>
-  <div class="layer3">
-  </div>
-  <div class="layer4">
-  </div>
-  <div class="layer5">
-  </div>
+    {% include head.html %}
+    <script src="{{base}}/assets/jquery.min.js"></script>
+    <script src="{{base}}/assets/jquery.color.js"></script>
+    <script src="{{base}}/assets/scrolltest.js"></script>
+    <link href='{{base}}/assets/800.css' rel='stylesheet'>
 
-</div>
-  <div style="width: 100%; text-align:center;" >
-  <div id="social_container">
-    <span>
+</head>
+
+<body>
+    <div class="header_box">
+        <div class="header_bar_container">
+            <div class="header_bar">
+                <div class="logo_header_bar">
+                    Sealicon Valley
+                </div>
+                <div class="menu_header_bar">
+                    <a href="index.html"><span class="menu_header_text">Comics</span></a>
+                    <a href="characters.html"><span class="menu_header_text">Characters</span></a>
+                    <a href="blog.html"><span class="menu_header_text">Blog</span></a>
+                    <span class="burger"></span>
+                </div>
+            </div>
+        </div>
+        <div class="logo">
+            Sealicon<br/>
+            <br/> Valley
+        </div>
+        <div class="layer2">
+        </div>
+        <div class="layer3">
+        </div>
+        <div class="layer4">
+        </div>
+        <div class="layer5">
+        </div>
+
+    </div>
+    <div style="width: 100%; text-align:center;">
+        <div id="social_container">
+            <span>
       <a href="https://www.instagram.com/sealiconvalley/">
       <img class="social_img" src="{{base}}/assets/ig.png">
     </a>
     </span>
-    <span>
+            <span>
       <a href="https://www.facebook.com/sealiconvalley/">
       <img class="social_img" src="{{base}}/assets/fb.png">
     </a>
     </span>
-    <span>
+            <span>
       <img class="social_img" src="{{base}}/assets/youtube.png">
     </span>
-    <span>
+            <span>
       <img class="social_img" src="{{base}}/assets/twitter.png">
     </span>
-    <span>
+            <span>
       <img class="social_img" src="{{base}}/assets/gplus.png">
     </span>
-    <span>
+            <span>
       <img class="social_img" src="{{base}}/assets/pinterest.png">
     </span>
-  </div>
-</div>
-<!--
+        </div>
+    </div>
+    <!--
 <div style="height:2000px; width: 100%;">
   <div class="smallheader"></div>
 </div>
 -->
 </body>
+
 </html>
