set up analytics

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,4 +12,7 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Quicksand" />
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+
+  <script src="{{base}}/assets/jquery.min.js"></script>
+  <script src="{{base}}/assets/analytics.js"></script>
 </head>
