use new assets to improve header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,47 +1,56 @@
-<head>
-  {% include head.html %}
-</head>
-<body>
-<div id="banner_container">
-  <a href="index.html">
-  <div id="title_container">
-    <h1 class="title_h1">Sealicon</h1>
-    <h1 class="title_h1">Valley</h1>
-  </div>
-</a>
-  <div style="width: 100%; text-align:center;" >
-  <div id="social_container">
-    <span>
-      <a href="https://www.instagram.com/sealiconvalley/">
-      <img class="social_img" src="{{base}}/assets/ig.png">
-    </a>
-    </span>
-    <span>
-      <a href="https://www.facebook.com/sealiconvalley/">
-      <img class="social_img" src="{{base}}/assets/fb.png">
-    </a>
-    </span>
-    <span>
-      <img class="social_img" src="{{base}}/assets/youtube.png">
-    </span>
-    <span>
-      <img class="social_img" src="{{base}}/assets/twitter.png">
-    </span>
-    <span>
-      <img class="social_img" src="{{base}}/assets/gplus.png">
-    </span>
-    <span>
-      <img class="social_img" src="{{base}}/assets/pinterest.png">
-    </span>
-  </div>
-</div>
+{% include base.html %}
 
-<div style="width: 100%; text-align:center;" >
-  <div id="menu_container">
-    <a href="index.html"><span class="menu_text">Comics</span></a>
-    <a href="characters.html"><span class="menu_text">Characters</span></a>
-    <a href="blog.html"><span class="menu_text">Blog</span></a>
-  </div>
+<!DOCTYPE html>
+<html lang="{{ page.lang | default: site.lang | default: " en " }}">
+
+<head>
+    {% include head.html %}
+
+</head>
+
+<body>
+    <div class="header_box">
+        {% include header_bar.html %}
+        <div class="logo">
+        </div>
+        <div id="social_container">
+            <a href="https://www.instagram.com/sealiconvalley/">
+                <div class="social_img">
+                </div>
+            </a>
+            <a href="https://www.facebook.com/sealiconvalley/">
+                <div class="social_img">
+                </div>
+            </a>
+            <div class="social_img">
+            </div>
+            <div class="social_img">
+            </div>
+            <div class="social_img">
+            </div>
+        </div>
+        <div class="layer1">
+        </div>
+        <div class="layer2">
+        </div>
+        <div class="layer3">
+        </div>
+        <div class="layer4">
+        </div>
+        <div class="layer5">
+        </div>
+        <div class="drone">
+        </div>
+
+    </div>
+    <div style="width: 100%; text-align:center;">
+
+    </div>
+    <!--
+<div style="height:2000px; width: 100%;">
+  <div class="smallheader"></div>
 </div>
-</div>
+-->
 </body>
+
+</html>
