--- a/_layouts/characters0.html
+++ b/_layouts/characters0.html
@@ -4,15 +4,13 @@
 <html lang="{{ page.lang | default: site.lang | default: " en " }}">
 
 <head>
-
-  <script src="{{base}}/assets/jquery.min.js"></script>
   <script src="{{base}}/assets/carousel.js"></script>
   {% include head.html %}
 </head>
 
 
 <body>
-    {% include headerv2.html %}
+    {% include header.html %}
 <div class="home_content" id="characters">
       <div class="ccontainer">
         <div class="carousel" id="ccarousel">
