--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,12 +7,16 @@
 
   <link href='{{base}}/assets/reset_css.css' rel='stylesheet'>
   <link href='{{base}}/assets/main.css' rel='stylesheet'>
+  <link href='{{base}}/assets/800.css' rel='stylesheet'>
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Quicksand" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
 
+  <script src="{{base}}/assets/jquery.color.js"></script>
   <script src="{{base}}/assets/jquery.min.js"></script>
+  <script src="{{base}}/assets/scrolltest.js"></script>
   <script src="{{base}}/assets/analytics.js"></script>
 </head>
