reformat footer. add subscribe fields view.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,16 @@
 <div class="footer">
+  <div class="footer_subscribe">
+    <div class="subscribe_container">
+    <input type="text" class="subscribe_email" />
+    <div class="subscribe_button">Subscribe</div>
+  </div>
+  </div>
+
+  <div class="footer_email">
+  SEALICONVALLEY@GMAIL.COM
+  </div>
+
+  <div class="footer_copyright">
 &copy; 2017 Sealicon Valley Inc. All Rights Reserved.
+  </div>
 </div>
