--- a/assets/main.css
+++ b/assets/main.css
@@ -1,43 +1,48 @@
 h1 {
-	font-family: 'Open Sans', sans-serif;
-	font-size: 24px;
-	font-style: normal;
-	font-variant: normal;
-	font-weight: 500;
-	line-height: 26.4px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 24px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 500;
+    line-height: 26.4px;
 }
+
 h3 {
-	font-family: 'Open Sans', sans-serif;
-	font-size: 14px;
-	font-style: normal;
-	font-variant: normal;
-	font-weight: 500;
-	line-height: 15.4px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 500;
+    line-height: 15.4px;
 }
+
 p {
-	font-family: 'Open Sans', sans-serif;
-	font-size: 14px;
-	font-style: normal;
-	font-variant: normal;
-	font-weight: 400;
-	line-height: 20px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    line-height: 20px;
 }
+
 blockquote {
-	font-family: 'Open Sans', sans-serif;
-	font-size: 21px;
-	font-style: normal;
-	font-variant: normal;
-	font-weight: 400;
-	line-height: 30px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 21px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    line-height: 30px;
 }
+
 pre {
-	font-family: 'Open Sans', sans-serif;
-	font-size: 13px;
-	font-style: normal;
-	font-variant: normal;
-	font-weight: 400;
-	line-height: 18.5714px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 13px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 400;
+    line-height: 18.5714px;
 }
+
 a:link {
     text-decoration: none;
 }
@@ -53,65 +58,71 @@ a:hover {
 a:active {
     text-decoration: none;
 }
-body {
-	font-family: 'Open Sans', sans-serif;
-	color: #414141;
-}
-#banner_container {
-	position: relative;
-	z-index:3;
-	background-image:url("wbb.png");
-	background-repeat:no-repeat;
-	width: 100%;
-	height: 293px;
-	background-size: cover;
-	background-position: 50% 50%;
-	background-repeat: no-repeat;
-	overflow-x: hidden;
-	-webkit-background-size: cover;
-}
-#title_container {
-	width: 400px;
-	margin: 0 auto;
-	margin-top: 70px;
-}
-.title_h1 {
-	line-height: 1.2em;
-	text-align: center;
-  font-family:lulo-clean-w01-one-bold,sans-serif;
-	#font-family: 'Roboto Slab', serif;
-	color: #414141;
-	font-size: 46px;
-	font-weight: bold;
-	letter-spacing: 4px;
-	text-transform: uppercase;
 
+body {
+    font-family: 'Open Sans', sans-serif;
+    color: #414141;
 }
+
+#banner_container {
+    position: relative;
+    z-index: 3;
+    background-image: url("wbb.png");
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 293px;
+    background-size: cover;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    overflow-x: hidden;
+    -webkit-background-size: cover;
+}
+
+#title_container {
+    width: 400px;
+    margin: 0 auto;
+    margin-top: 70px;
+}
+
+.title_h1 {
+    line-height: 1.2em;
+    text-align: center;
+    font-family: lulo-clean-w01-one-bold, sans-serif;
+    #font-family: 'Roboto Slab', serif;
+    color: #414141;
+    font-size: 46px;
+    font-weight: bold;
+    letter-spacing: 4px;
+    text-transform: uppercase;
+}
+
 #menu_container {
-	margin: 0 auto;
-	display: inline-block;
-	margin-top: 10px;
+    margin: 0 auto;
+    display: inline-block;
+    margin-top: 10px;
 }
+
 .menu_text {
-	font-size: 20px;
-	font-weight: bold;
-	letter-spacing: 2px;
-	color: #414141;
-	margin-left: 5px;
-	margin-right: 5px;
+    font-size: 20px;
+    font-weight: bold;
+    letter-spacing: 2px;
+    color: #414141;
+    margin-left: 5px;
+    margin-right: 5px;
 }
+
 .home_content {
-	max-width: 1400px;
-	margin: 0 auto;
+    max-width: 1400px;
+    margin: 0 auto;
 }
+
 .masonry {
     padding: 0;
     -moz-column-gap: 30px;
     -webkit-column-gap: 30px;
     column-gap: 30px;
     font-size: .85em;
-		margin: 40px;
-
+    margin: 40px;
 }
 
 .item {
@@ -120,25 +131,25 @@ body {
     padding: 2px;
     margin: 0 0 30px;
     width: 100%;
-		/*
+    /*
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-shadow: 2px 2px 2px 2px #ccc;
 		*/
-		/* animation: item_animation 10s ease-in-out infinite; */
+    /* animation: item_animation 10s ease-in-out infinite; */
 }
 
 @keyframes item_animation {
-  25% {
-    transform: rotate(0.5deg);
-  }
-  50% {
-    transform: rotate(-0.5deg);
-  }
-  75% {
-    transform: rotate(0.5deg);
-  }
+    25% {
+        transform: rotate(0.5deg);
+    }
+    50% {
+        transform: rotate(-0.5deg);
+    }
+    75% {
+        transform: rotate(0.5deg);
+    }
 }
 
 @media only screen and (min-width: 400px) {
@@ -178,33 +189,102 @@ body {
         width: 1260px;
     }
 }
+
 .excerpt_container img {
-	width: 100%;
-}
-.footer {
-	width: 100%;
-	text-align: center;
-	font-size: 14px;
-	margin-top: 20px;
-	margin-bottom: 20px;
-}
-.post_info {
-	line-height:30px;
-	margin-top: 5px;
-	margin-bottom: 5px;
-	padding:0;
-}
-.home_post_title {
-	font-size: 20px;
-	text-transform: capitalize;
-	margin: 0;
-	font-weight: bold;
-}
-.home_post_date {
-	float:right;
-	margin: 0;
+    width: 100%;
 }
 
+.footer {
+    width: 100%;
+    text-align: center;
+    font-size: 14px;
+    margin-top: 10px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: #49545e;
+    color: white;
+}
+
+.footer_email {
+    margin-top: 20px;
+    margin-bottom: 5px;
+    font-size: 14px;
+    letter-spacing: 1px;
+}
+
+.footer_copyright {
+    margin-top: 15px;
+    margin-bottom: 5px;
+    font-size: 12px;
+    letter-spacing: 1px;
+    color: #a4aaaf;
+}
+
+.footer_subscribe {
+	margin-top: 5px;
+	display: block;
+	height: 35px;
+	width: 100%;
+}
+
+.subscribe_container {
+	width: 500px; margin: 0 auto;
+	height:100%;
+}
+.subscribe_email {
+    width: 260px;
+    padding-left:3px;
+		height:100%;
+    position: relative;
+    left: 0;
+    font-size: 16px;
+    border: 1px solid #fff;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+		display: inline-block;
+		float:left;
+		color:#41b0f7;
+}
+.subscribe_button {
+	width: 200px;
+	height:100%;
+	line-height: 40px;
+  text-align: center;
+	font-size: 16px;
+	text-transform: uppercase;
+	font-weight: bold;
+	border: 1px solid #41b0f7;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	display: inline-block;
+	text-align: center;
+	position: relative;
+	padding:0;
+	float:right;
+	background-color: #41b0f7;
+	letter-spacing: 1px;
+}
+
+.post_info {
+    line-height: 30px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    padding: 0;
+}
+
+.home_post_title {
+    font-size: 20px;
+    text-transform: capitalize;
+    margin: 0;
+    font-weight: bold;
+}
+
+.home_post_date {
+    float: right;
+    margin: 0;
+}
 
 @media only screen and (min-width: 400px) {
     #blog_masonry {
@@ -245,123 +325,133 @@ body {
 }
 
 .fish {
-	width: 150px;
-  position: absolute;
-  top: 100px;
-  left: 100px;
-  animation: fishy 10s ease-in-out infinite;
-  transform: translateX(0) rotateY(180deg) rotate(-45deg);
-	z-index: 10;
+    width: 150px;
+    position: absolute;
+    top: 100px;
+    left: 100px;
+    animation: fishy 10s ease-in-out infinite;
+    transform: translateX(0) rotateY(180deg) rotate(-45deg);
+    z-index: 10;
 }
 
 @keyframes fishy {
-  25% {
-    transform: translateX(300px) rotateY(180deg) rotate(45deg);
-  }
-  50% {
-    transform: translateX(600px) rotate(-45deg);
-  }
-  75% {
-    transform: translateX(300px) rotate(45deg);
-  }
+    25% {
+        transform: translateX(300px) rotateY(180deg) rotate(45deg);
+    }
+    50% {
+        transform: translateX(600px) rotate(-45deg);
+    }
+    75% {
+        transform: translateX(300px) rotate(45deg);
+    }
 }
+
 .post_container {
-	width: 800px;
-	text-align:center;
-	margin: 20px auto;
-	margin-top: 20px;
-	margin-bottom: 20px;
-	display: block;
+    width: 800px;
+    text-align: center;
+    margin: 20px auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    display: block;
 }
+
 .post_container img {
-	width: 30px;
+    width: 30px;
 }
+
 #characters {
-		padding: 70px 0;
-		display: block;
-		max-width: 1400px;
-		border-style: solid;
+    padding: 70px 0;
+    display: block;
+    max-width: 1400px;
+    border-style: solid;
     border-width: 1px;
-		position:relative;
+    position: relative;
 }
 
 .ccontainer {
-	margin: 0 auto;
-	width: 250px;
-	height: 200px;
-	position: relative;
-	perspective: 1000px;
-	z-index: 100;
+    margin: 0 auto;
+    width: 250px;
+    height: 200px;
+    position: relative;
+    perspective: 1000px;
+    z-index: 100;
 }
 
 .carousel {
-	height: 100%;
-	width: 100%;
-	position: absolute;
-	transform-style: preserve-3d;
-	transition: transform 0.8s;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    transform-style: preserve-3d;
+    transition: transform 0.8s;
 }
 
 .citem {
-	display: block;
-	position: absolute;
-	background: transparent;
-	width: 202px;
-	height: 235px;
-	font-size: 5em;
-	text-align: center;
-	color: #FFF;
-	z-index: 0;
+    display: block;
+    position: absolute;
+    background: transparent;
+    width: 202px;
+    height: 235px;
+    font-size: 5em;
+    text-align: center;
+    color: #FFF;
+    z-index: 0;
 }
 
 .a {
-	transform: rotateY(0deg) translateZ(250px);
-	background-image:url("octopus.png");
-	background-size: cover;
+    transform: rotateY(0deg) translateZ(250px);
+    background-image: url("octopus.png");
+    background-size: cover;
 }
+
 .b {
-	transform: rotateY(72deg) translateZ(250px);
-	background-image:url("dolphin.png");
-	background-size: cover;
+    transform: rotateY(72deg) translateZ(250px);
+    background-image: url("dolphin.png");
+    background-size: cover;
 }
+
 .c {
-	transform: rotateY(144deg) translateZ(250px);
-	background-image:url("narwhal.png");
-	background-size: cover;
+    transform: rotateY(144deg) translateZ(250px);
+    background-image: url("narwhal.png");
+    background-size: cover;
 }
+
 .d {
-	transform: rotateY(216deg) translateZ(250px);
-	background-image:url("octopus.png");
-	background-size: cover;
+    transform: rotateY(216deg) translateZ(250px);
+    background-image: url("octopus.png");
+    background-size: cover;
 }
+
 .e {
-	transform: rotateY(288deg) translateZ(250px);
-	background-image:url("dolphin.png");
-	background-size: cover;
+    transform: rotateY(288deg) translateZ(250px);
+    background-image: url("dolphin.png");
+    background-size: cover;
 }
+
 .navigation_holder {
-	width:600px;
-	height:100%;
-	position:absolute;
-	margin: 0 auto;
-	top:0px;
-	margin-left: auto;
-	margin-right: auto;
-	left: 0;
-	right: 0;
+    width: 600px;
+    height: 100%;
+    position: absolute;
+    margin: 0 auto;
+    top: 0px;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
 }
+
 .next {
-	width: 250px;
-	height:100%;
-	float:right;
-	background:yellow;
-	z-index: 1000;
-	perspective: 1200;
+    width: 250px;
+    height: 100%;
+    float: right;
+    background: yellow;
+    z-index: 1000;
+    perspective: 1200;
 }
+
 .prev {
-	width: 250px;
-	height:100%;
-	float:left;
-	background:red;
-	z-index: 1000;
+    width: 250px;
+    height: 100%;
+    float: left;
+    background: red;
+    z-index: 1000;
 }
