Add small banner. fade in and out menu bar

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+
     <div class="header_box">
         {% include header_bar.html %}
         <div class="logo">
@@ -43,14 +44,12 @@
         </div>
 
     </div>
-    <div style="width: 100%; text-align:center;">
 
+
+    <div class="header_box_small">
+        {% include header_bar.html %}
     </div>
-    <!--
-<div style="height:2000px; width: 100%;">
-  <div class="smallheader"></div>
-</div>
--->
+  
 </body>
 
 </html>
