--- a/_layouts/characters0.html
+++ b/_layouts/characters0.html
@@ -4,7 +4,7 @@
 <html lang="{{ page.lang | default: site.lang | default: " en " }}">
 
 <head>
-  <script src="{{base}}/assets/carousel.js"></script>
+  <!--<script src="{{base}}/assets/carousel.js"></script>-->
   {% include head.html %}
 </head>
 
